# Survey

./: .gitignore  README.md  Untitled-1.ipynb  main.py  navigator.py  pyproject.toml  utils.py
.streamlit/: credentials.yaml  firebase.json  firebase2.json  secrets.toml
app/: main.py  navigator.py  survey.py  utils.py
app/streamlit_survey/: __init__.py  pages.py  streamlit_survey.py
assets/: symptoms.json  symptoms_template.json
data/: symptoms_evaluated.xlsx
data/case_files/: 20160728.txt  20161013.txt  20161124.txt  20190311.txt  20190325.txt  20190408.txt  20190513.txt  20190527.txt  20190603.txt  20190624.txt  20190701.txt  20190708.txt  20190902.txt  20190916.txt  20191014.txt  20191028.txt  20191111.txt  20191125.txt  20191202.txt  20191209.txt  20200311.txt  20200325.txt  20200408.txt  20200513.txt  20200610.txt  20200715.txt  20201028.txt  20201104.txt  20201202.txt  20201209.txt  20210316.txt  20210330.txt  20210406.txt  20210427.txt  20210511.txt  20210601.txt  20210622.txt  20210907.txt  20211005.txt  20211009.txt  (+13 more)
streamlit_survey/: streamlit_survey.py
survey/: main.py
survey/streamlit_survey/: __init__.py
